--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<h1>Main Page</h1>
+<!DOCTYPE html>
+<html>
+<body>
+<script src="https://d3js.org/d3.v6.min.js"></script>
+<script type="text/javascript" src="./final_project.js"></script>
+<div>
+  Hi!
+</div>
+</body>
+</html>
