axes and bars update properly when button pressed (DrHorn ty ur a gamer)

--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
+  <style>
+      /* put style changes here */
+      .bar {fill: steelblue;}
+  </style>
 <body>
-<script src="https://d3js.org/d3.v6.min.js"></script>
-<script type="text/javascript" src="./final_project.js"></script>
-<div>
-  Hi!
-</div>
+  <h1> Games by Number of Hours Played / Total Copies Purchased </h1>
+  <div>
+      <input id = "updateButton1" name="Update" type="button"
+      value="Toggle Data Displayed" onclick="changeGraph()">
+  </div>
+  <script src="https://d3js.org/d3.v6.min.js"></script>
+  <script type="text/javascript" src="./final_project.js"></script>
 </body>
 </html>
