--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
       value="Sort Lowest to Highest" onclick="sortLowest()">
   </div>
   <script src="https://d3js.org/d3.v6.min.js"></script>
-  <script type="text/javascript" src="./temp_final_project.js"></script>
+  <script type="text/javascript" src="./final_project.js"></script>
 </body>
 </html>
