--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
   <style>
       /* put style changes here */
       .bar {fill: steelblue;}
+      .d3-tip{
+	background: rgba(42, 42, 42, .8);
+	font-family: "Open Sans", sans-serif;
+	font-size: 16px;
+	color: #fff;
+	border-radius: 2px;
+	padding: 12px;
+	text-align: center;
+	}
   </style>
 <body>
   <h1> Games by Number of Hours Played / Total Copies Purchased </h1>
@@ -14,6 +23,7 @@
       <input id = "updateButton3" name="Sort2" type="button"
       value="Sort Lowest to Highest" onclick="sortLowest()">
   </div>
+  <script src="https://unpkg.com/d3-v6-tip@1.0.6/build/d3-v6-tip.js"></script>
   <script src="https://d3js.org/d3.v6.min.js"></script>
   <script type="text/javascript" src="./final_project.js"></script>
 </body>
