Added padding between bars and header text now updates with graph

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       .bar {fill: steelblue;}
   </style>
 <body>
-  <h1> Games by Number of Hours Played / Total Copies Purchased </h1>
+  <h1> Games by Total Copies Purchased </h1>
   <div>
       <input id = "updateButton1" name="Update" type="button"
       value="Toggle Data Displayed" onclick="changeGraph()">
