Added an html div block for visualization instructions.

--- a/index.html
+++ b/index.html
@@ -107,6 +107,11 @@
       {
         display: block;
       }
+
+      #instructions
+      {
+        text-align: right;
+      }
     </style>
   </head>
 
@@ -125,9 +130,17 @@
       </div>
 
       <div class="divider py-1 bg-dark my-4"></div>
-
+      <div class= "instructions">
+        <h5>Instructions:</h5>
+        <p> "Toggle Data" - Click to switch between a visualization of Steam games by Average Hours Played or Total Number of Copies Purchased </p>
+        <p> (NOT WORKING YET) "Group Similar Values" - Click to make every bar display a unique value. All games that fit under that value can be seen by clicking the y-axis value. <p>
+        <p> "Sort Data" - Click to pick how you want the displayed data to be sorted. </p>
+        <p> You can also hover over the bars to get exact data about a game as well as information that is not displayed. </p>
+      </div>
       <div class="mx-auto" style="width: 400px">
         <div class="row">
+          <div class="col-md-2"></div>
+          <div class="col-md-2"></div>
           <div class="btn-toolbar" role="toolbar">
             <div class="btn-group" role="group">
               <button type="button" class="btn btn-dark" id="btn_toggledata_overview" data-toggle="button" name="Update"
@@ -154,7 +167,7 @@
       <div class="row" id="viz-header">
         <div class="col-md-2"></div>
         <div class="col-md-8">
-          <h5 class="text-center">Games by Total Copies Purchased</h5>
+          <h4 class="text-center">Games by Total Copies Purchased</h4>
         </div>
         <div class="col-md-2"></div>
       </div>
