--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
                 <div class="dropdown-menu">
                   <a class="dropdown-item" href="#" onclick="sortAlphabet()">Alphabetically</a>
                   <a class="dropdown-item" href="#" id="btn_sorthighest_overview" data-toggle="button" name="Sort1"
-                  onclick="sortHighest()">Highest to Lowest Average Hours Played</a>
+                  onclick="sortHighest()">Highest to Lowest</a>
                   <a class="dropdown-item" href="#" id="btn_sortlowest_overview" data-toggle="button" name="Sort2"
-                  onclick="sortLowest()">Lowest to Highest Average Hours Played</a>
+                  onclick="sortLowest()">Lowest to Highest</a>
                 </div>
               </div>
             </div>
