Explained the meaning of colored bars in instructions

--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
         <h5>Instructions:</h5>
         <p> "Toggle Data" - Click to switch between a visualization of Steam games by Average Hours Played or Total Number of Copies Purchased </p>
         <p> "Sort Data" - Click to pick how you want the displayed data to be sorted. </p>
-        <p> You can also hover over the bars to get exact data about a game as well as information that is not displayed. </p>
+        <p> You can hover over the bars to get exact data about a game as well as information that is not displayed. </p>
+        <p> The color of the bar represents combined playtime across all players. Darker bars have a greater total hours played, which is separate from average hours played per individual.</p>
       </div>
       <div class="mx-auto" style="width: 240px">
         <div class="row">
