--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       #vizArea {
         width: 100%;
         height: 700px;
-        overflow-x: scroll;
+        overflow-x: hidden;
         overflow-y: scroll;
       }
 
