Excess comment removal

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <title>Steam Data - Visualization</title>
 
-    <!-- currently d3 only takes CSS from here, not external stylesheet - to be fixed -->
+    <!-- currently d3 only takes CSS from here, not external stylesheet -->
     <style>
       .d3-tip
       {
@@ -36,7 +36,6 @@
         overflow-x: hidden;
         overflow-y: scroll;
       }
-
       #instructions
       {
         text-align: right;
