Completed implementation of y-axis game title truncation

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
           <div class= "instructions">
             <h5>Instructions</h5>
             <ul>
-              <li>"Toggle Data" - Click to switch between a visualization of Steam games by Average Hours Played or Total Number of Copies Purchased</li>
-              <li>"Sort Data" - Click to pick how you want the displayed data to be sorted.</li>
+              <li><strong>Toggle Data</strong> - Click to switch between a visualization of Steam games by Average Hours Played or Total Number of Copies Purchased</li>
+              <li><strong>Sort Data</strong> - Click to pick how you want the displayed data to be sorted.</li>
               <li>You can hover over the bars to get exact data about a game as well as information that is not displayed.</li>
               <li>The color of the bar represents combined playtime across all players. Darker bars have a greater total hours played, which is separate from average hours played per individual.</li>
             </ul>
